# janus-gateway-sdk

./: Makefile.am  README.md  configure.ac
conf/: janus.plugin.recordplay.cfg.sample  janus.plugin.streaming.cfg.sample
plugins/recordings/: 1234.nfo
